test/Fail/PathWithBoundary.err
PathWithBoundary.agda:20.1-12: error: [UnequalTerms]
The terms
  suc (q + m)
and
  m
are not equal at type Nat
when checking the definition of PathWithBoundary.with-18
